[package]
name = "jcat"
version = "0.1.4"
description = "Simple CLI JSON(JSON5) Parser"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/jcat"
keywords = ["json", "parser", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
peg = "0.7"
