[package]
name = "df-utils"
version = "0.1.4"
description = "Simple CLI Parser for Data Formats"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/jcat"
keywords = ["json", "parser", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[dependencies]
peg = "0.7"
unicode_categories = "0.1"

[[bin]]
name = "jprs"
path = "src/bin/jprs.rs"
