[package]
name = "df-utils"
version = "0.1.4"
description = "Simple CLI Parser for Data Formats"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/jcat"
keywords = ["json", "parser", "cli"]
categories = ["command-line-utilities"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs"
]

[features]
default = ["bin"]
bin = ["clap"]

[dependencies]
peg = "0.7"
unicode_categories = "0.1"
clap = { version = "3.0.0-beta.2", optional = true }

[[bin]]
name = "jprs"
required-features = ["bin"]

[[bin]]
name = "jgen"
required-features = ["bin"]

[[bin]]
name = "jfmt"
required-features = ["bin"]
